@@ -1,6 +1,7 @@
 next
 Warning: this version is not backwards compatible to 0.6.
 
+[+] Adde hasTags() and it's alias hasTag() to check if all tags specified are attached to current model.
 [+] New syntax: echo $post->tags (or by what name behaviour is attached) will print comma separated tags.
 [*] getTags now returns array since implode is really easy to do yourself.
 [-] Removed getTagsArray().
